# security_assessment

./: .gitignore  security_assessment_api.json
server/: .env  alembic.ini  dump_data.py  f.py  mail.html  main.py  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 1cb81c2ab647_changed_realtion_ships.py  1de735bf3e7b_relating_apps_and_subs.py  1edadd5a4337_added_is_completed_to_applications.py  31510adf42c8_added_is_completed_column_and_fixed_.py  452f868c8f72_drafts_ft.py  469c588fc136_added_relationship_b_w_checklist_and_.py  5577c549c070_added_infra_host_and_app_tech_columns_.py  6a40ac2d3464_added_rlationship_b_w_admin_and_sub_ass.py  6bb584c594ae_app_auto_create.py  7ba26179c1fd_added_relationship_b_w_checklist_and_.py  875e718b470a_status_fields_in_app_and_chk.py  921417d3f292_added_priority_and_department_fix.py  d8a91ba62e8c_increased_text_sizes.py  (+9 more)
server/controllers/: admin_inspect.py  applcation_controller.py  application_controller.py  assignment_controller.py  auth_controller.py  checklist_controller.py  controls_controller.py  pre_assessment_controller.py  pre_assessment_drafts.py  user_responses_controller.py
server/db/: base.py  config.py  connection.py  sql_notebook.mysql-notebook
server/models/: __init__.py  applications.py  checklist_assignments.py  checklists.py  controls.py  schemas.py  user_responses.py  users.py
server/routes/: admin_inspect_routes.py  application_routes.py  assignment_routes.py  auth_routes.py  checklists_routes.py  control_routes.py  pre_assess_draft_routes.py  pre_assessment_routes.py  responses_routes.py
(+159 files in other folders)
